--- a/airmap/AppAndroid/Airmap/app/src/main/res/layout/activity_man_hinh2.xml
+++ b/airmap/AppAndroid/Airmap/app/src/main/res/layout/activity_man_hinh2.xml
@@ -10,10 +10,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.loc.airmap.ManHinh2">
 
+    <com.github.mikephil.charting.charts.BarChart
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        android:id="@+id/bargraph"></com.github.mikephil.charting.charts.BarChart>
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="240dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/listview_ThongSo" />
